WELD-2307 Allow reflection calls for jboss-classfilewriter in tests.