@@ -28,6 +28,9 @@
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
         <!-- Travis CI build workaround -->
         <travis.surefire.argLine>-Xmx1024m</travis.surefire.argLine>
+        
+        <!-- Only initialized in JDK 9 profile to provide extra CMD args to surefire -->
+        <surefire.plugin.jdk9.args></surefire.plugin.jdk9.args>
 
         <manifest.specification.title>JSR-365 Contexts and Dependency Injection for Java</manifest.specification.title>
         <manifest.specification.version>2.0</manifest.specification.version>
@@ -743,6 +746,11 @@
             <activation>
                 <jdk>9</jdk>
             </activation>
+            <properties>
+                <!--This property will be added to surefire jvm args when needed. Due to reflection usage we have to to open 
+                package java.lang in module java.base to unnamed module, hence making it available for reflection-->
+                <surefire.plugin.jdk9.args>--add-opens java.base/java.lang=ALL-UNNAMED </surefire.plugin.jdk9.args>
+            </properties>
             <build>
                 <pluginManagement>
                     <plugins>
@@ -759,7 +767,6 @@
                             <artifactId>maven-compiler-plugin</artifactId>
                             <version>3.6.0</version>
                         </plugin>
-
                     </plugins>
                 </pluginManagement>
             </build>
